# Lab4_polinoms

./: CMakeLists.txt  Lab_polinoms.sln  README.md
Lab_polinoms/: Lab_polinoms.vcxproj  Lab_polinoms.vcxproj.filters
Lab_polinoms/x64/Debug/: Lab_polinoms.exe.recipe  Lab_polinoms.ilk  main.obj.enc  vc143.idb
Lab_polinoms/x64/Debug/Lab_polinoms.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lab_polinoms.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
source/: List.h  Main.cpp  Monom.cpp  Monom.h  Polinom.cpp  Polinom.h
